# 6dslam-v2

./: CMakeLists.txt  bow_output.tar.7z  good_orb_data.m  good_surf_data.m  orb_data.m  orb_data2.m  orb_surf_disp.m  surf_data.m
output/: bowTest2_100.feature.surf  bowTest2_102.feature.surf  bowTest2_103.feature.surf  bowTest2_104.feature.surf  bowTest2_105.feature.surf  bowTest2_107.feature.surf  bowTest2_108.feature.surf  bowTest2_109.feature.surf  bowTest2_11.feature.surf  bowTest2_112.feature.surf  bowTest2_114.feature.surf  bowTest2_115.feature.surf  bowTest2_116.feature.surf  bowTest2_117.feature.surf  bowTest2_118.feature.surf  bowTest2_120.feature.surf  bowTest2_121.feature.surf  bowTest2_124.feature.surf  bowTest2_127.feature.surf  bowTest2_129.feature.surf  bowTest2_13.feature.surf  bowTest2_130.feature.surf  bowTest2_132.feature.surf  bowTest2_135.feature.surf  bowTest2_137.feature.surf  bowTest2_139.feature.surf  bowTest2_140.feature.surf  bowTest2_141.feature.surf  bowTest2_143.feature.surf  bowTest2_145.feature.surf  bowTest2_146.feature.surf  bowTest2_151.feature.surf  bowTest2_152.feature.surf  bowTest2_153.feature.surf  bowTest2_155.feature.surf  bowTest2_157.feature.surf  bowTest2_161.feature.surf  bowTest2_162.feature.surf  bowTest2_163.feature.surf  bowTest2_164.feature.surf  (+1328 more)
src/: Frame_input.h  evaluate_registration_orb.cpp  evaluate_registration_surf.cpp  evaluate_registration_surf_weight.cpp  evaluate_registrationv2.cpp  evaluate_registrationv3.cpp  kinect_at_home.cpp  kinect_at_home_bow_setup.cpp
src/FeatureDescriptor/: FeatureDescriptor.cpp  FeatureDescriptor.h  FloatHistogramFeatureDescriptor.cpp  OrbFeatureDescriptor.cpp  RGBFeatureDescriptor.h  SurfFeatureDescriptor64.cpp  SurfFeatureDescriptor64.h
src/FeatureExtractor/: FPFHExtractor.cpp  FPFHExtractor.h  FeatureExtractor.cpp  FeatureExtractor.h  OrbExtractor.cpp  OrbExtractor.h  OwnFeatureExtractor.cpp  OwnFeatureExtractor.h  SurfExtractor.cpp  SurfExtractor.h
src/FrameMatcher/: AICK.cpp  AICK.h  AICKv2.cpp  BowAICK.h  BowAICKv2.h  DistanceNetMatcher.h  DistanceNetMatcherv2.cpp  DistanceNetMatcherv2.h  DistanceNetMatcherv3.cpp  DistanceNetMatcherv4.cpp  FrameMatcher.cpp  FrameMatcher.h  GraphCutMatcherv1.cpp  NDTMatcher.h  PlaneMatcher.h  RansacPCLCopyMatcher.cpp  dnet.cpp  dnet.h
trunk/: CMakeLists.txt  EMCR_plots.m  GICP_and_NDT_data.m  good_orb_data2.m  orb_data.m  orb_data4.m  orb_data5.m  orb_surf_disp.m  surf_data2.m
trunk/output/: bowTest2_0.feature.surf  bowTest2_1.feature.surf  bowTest2_10.feature.surf  bowTest2_101.feature.surf  bowTest2_106.feature.surf  bowTest2_110.feature.surf  bowTest2_111.feature.surf  bowTest2_113.feature.surf  bowTest2_119.feature.surf  bowTest2_12.feature.surf  bowTest2_122.feature.surf  bowTest2_123.feature.surf  bowTest2_125.feature.surf  bowTest2_126.feature.surf  bowTest2_128.feature.surf  bowTest2_131.feature.surf  bowTest2_133.feature.surf  bowTest2_134.feature.surf  bowTest2_136.feature.surf  bowTest2_138.feature.surf  bowTest2_14.feature.surf  bowTest2_142.feature.surf  bowTest2_144.feature.surf  bowTest2_147.feature.surf  bowTest2_148.feature.surf  bowTest2_149.feature.surf  bowTest2_15.feature.surf  bowTest2_150.feature.surf  bowTest2_154.feature.surf  bowTest2_156.feature.surf  bowTest2_158.feature.surf  bowTest2_159.feature.surf  bowTest2_16.feature.surf  bowTest2_160.feature.surf  bowTest2_165.feature.surf  bowTest2_166.feature.surf  bowTest2_167.feature.surf  bowTest2_169.feature.surf  bowTest2_170.feature.surf  bowTest2_172.feature.surf  (+1392 more)
trunk/src/: Frame_input.h  evaluate_registration.cpp  evaluate_registration_orb.cpp  evaluate_registration_surf.cpp  evaluate_registrationv2.cpp  imu_grabber.cpp  kinect_at_home.cpp  kinect_at_home_basic.cpp  kinect_at_home_bow_setup.cpp
trunk/src/FeatureDescriptor/: FPFHFeatureDescriptor.cpp  FPFHFeatureDescriptor.h  FloatHistogramFeatureDescriptor.cpp  IntegerHistogramFeatureDescriptor.cpp  IntegerHistogramFeatureDescriptor.h  OrbFeatureDescriptor.cpp  RGBFeatureDescriptor.cpp  SurfFeatureDescriptor128.cpp  SurfFeatureDescriptor128.h  SurfFeatureDescriptor64.cpp  SurfFeatureDescriptor64.h
trunk/src/FeatureExtractor/: OrbExtractor.cpp  SurfExtractor.cpp  SurfExtractor.h
trunk/src/FeatureExtractor/OpenSurf/: fasthessian.cpp
trunk/src/FrameMatcher/: AICK.cpp  AICKv2.h  BasicGIcpMatcher.cpp  BasicGIcpMatcher.h  BasicIcpMatcher.cpp  BasicIcpMatcher.h  BowAICK.cpp  BowAICK.h  BowAICKv2.cpp  BowAICKv2.h  DistanceNetMatcher.cpp  DistanceNetMatcherv2.cpp  DistanceNetMatcherv2.h  DistanceNetMatcherv3.h  DistanceNetMatcherv4.h  DistanceNetMatcherv5.cpp  DistanceNetMatcherv5.h  FilterMatcher.cpp  FilterMatcher.h  FrameMatcher.cpp  FrameMatcher.h  GraphCutMatcherv1.cpp  GraphCutMatcherv1.h  MultiFilterMatcher.cpp  MultiFilterMatcher.h  MultiLayerMatcher.cpp  MultiLayerMatcher.h  NDTMatcher.cpp  PlaneMatcher.cpp  RansacPCLCopyMatcher.h  RansacPCLCopySlowMatcher.cpp  RansacPCLCopySlowMatcher.h  SACIAMatcher.cpp  SACIAMatcher.h
trunk/src/Map/: Map3D.h  Map3DPlanesGraph.cpp  Map3DPlanesGraphv2.cpp  Map3DPlanesGraphv2.h  Map3DPlanesGraphv3.cpp  Map3DPlanesGraphv4.cpp  Map3DPlanesGraphv4.h  Map3Dbase.cpp  Map3Dbow.h  Map3Dgraph.cpp
trunk/src/RGBDSegmentation/: RGBDSegmentation.cpp  RGBDSegmentation.h  RGBDSegmentationBase.cpp  RGBDSegmentationDummy.cpp  RGBDSegmentationPCL.cpp  RGBDSegmentationScaleSearch.cpp  RGBDSegmentationTest.cpp  RGBDSegmentationTest.h  RGBDSegmentationV1.cpp
trunk/src/TransformationFilter/: BackTrackFilter.cpp  BowFilter.cpp  DistanceNetFilter.cpp  FeatureDistanceFilter.h  PixelDistanceFilter.cpp  UpdateWeightFilter.h
trunk/src/core/: RGBDFrame.cpp  RGBDFrame.h  Transformation.h
trunk/src/graph/: EdgePlane.cpp  EdgeSe3Plane.cpp  EdgeSe3Plane.h  EdgeSe3Plane2.cpp  EdgeSe3Plane2.h  EdgeSe3PointXYZ.h  VertexCamera.h  VertexPlane.cpp  VertexPlane.h  VertexPoint.h  VertexPoint3D.cpp  vertex_point_xyz.cpp  vertex_point_xyz.h
trunk/src/graphcutting/: GraphForCut.cpp  GraphForCut.h
trunk/src/mygeometry/: KeyPoint.h  KeyPointSet.cpp  Line.cpp  Line.h  Plane.cpp  Plane.h  Point.h
(+66 files in other folders)
